OCMUI-4410: Fix dark mode for update version graph (#582)

--- a/src/components/clusters/common/Upgrades/UpdateGraph/UpdateGraph.scss
+++ b/src/components/clusters/common/Upgrades/UpdateGraph/UpdateGraph.scss
@@ -33,7 +33,7 @@
   width: 100%;
 
   &::before {
-    background-color: #06c;
+    background-color: var(--pf-t--global--color--brand--default);
     content: '';
     height: 4px;
     position: absolute;
@@ -43,7 +43,6 @@
   &:last-child::after {
     background: transparent;
     border: 8px solid transparent;
-    border-left-color: var(--pf-t--global--border--color--default);
     border-width: 8px 12px;
     content: '';
     position: absolute;
@@ -53,7 +52,7 @@
 }
 
 .ocm-upgrade-graph-version {
-  color: initial;
+  color: inherit;
   display: flex;
   flex-direction: column;
   height: 35px;
@@ -79,8 +78,8 @@
   }
 
   &::after {
-    background: #fff;
-    border: 2px solid #fff;
+    background: var(--pf-t--global--background--color--primary--default);
+    border: 2px solid var(--pf-t--global--background--color--primary--default);
     border-radius: 12px;
     content: '';
     height: 12px;
